# nolds

./: .buildinfo  .gitignore  .pylintrc  .readthedocs.yaml  .ruff.toml  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  TODO.md  datasets.html  examples.html  genindex.html  index.html  measures.html  nolds.html  notes.txt  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tests.html
.github/workflows/: ci.yaml
_modules/: index.html
_modules/nolds/: datasets.html  examples.html  measures.html
_sources/: examples.rst.txt  index.rst.txt  index.txt  nolds.rst.txt  nolds.txt
_static/: alabaster.css
doc/: Makefile  make.bat
doc/source/: conf.py  examples.rst  index.rst  nolds.rst  requirements.txt  tests.rst
nolds/: __init__.py  datasets.py  examples.py  measures.py  test.py  test_measures.py
nolds/datasets/: ^JKSE.csv  ^N225.csv  ^NDX.csv  brown72.npy  lorenz.txt  lorenz_physionet.txt  qrandom.npy
